--- a/style.css
+++ b/style.css
@@ -1,3 +1,112 @@
-body {
-	background-color: yellow;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap');
+
+body, html {
+	font-family: 'Open Sans', sans-serif;
+	padding: 0;
+	margin: 0;
 }
+
+h1 {
+	font-weight: 800;
+	font-size: 50px;
+}
+
+h3 {
+	font-weight: bold;
+	font-size: 30px;
+}
+
+h4 {
+	font-weight: bold;
+	font-size: 20px;
+}
+
+.wrapper {
+	width: 960px;
+	margin: 0 auto;
+}
+
+.hero-banner {
+	background-color: #007FFF;
+	height: 100vh;
+	padding: 50px 20px;
+	box-sizing: border-box;
+}
+
+.hero-banner h4,
+.hero-banner h4 a {
+	color: white;
+	margin: 0;
+}
+
+.hero-banner h1 {
+	color: white;
+	margin: 14px 0 20px;
+}
+
+.hero-banner h3 {
+	color: white;
+	margin: 0 0 35px;
+}
+
+.character1{
+background: url(img/character1.png) no-repeat 0 0;
+background-size: contain;
+position: absolute; top: 262px; right: 30%;
+width: 291.45px;
+height: 307.85px;
+}
+
+.character3{
+background: url(img/character3.png) no-repeat 0 0;
+background-size: contain;
+position: absolute; top: 212px; right: 8%;
+width: 246.69px;
+height: 329.85px;
+transform: rotate(15deg);
+}
+
+.character2{
+background: url(img/character2.png) no-repeat 0 0;
+background-size: contain;
+position: absolute; top: 15%; right: 12%;
+width: 379px;
+height: 384.85px;
+}
+
+a.cta,
+button.cta {
+	font-size:  30px;
+	font-weight: bold;
+	color: white;
+	background: #007FFF;
+	display: inline-block;
+	box-shadow: 0 0 0 10px rgba(0,127,255,.15);
+	padding: 20px 30px;
+	border-radius: 10px;
+	text-decoration: none;
+}
+
+a.cta.alt,
+button.cta.alt {
+	background-color: #FFD400;
+	color: #111;
+	box-shadow: 0 0 0 10px rgba(0,0,0,.15);
+}
+
+/*
+<div class="hero-banner">
+		<div class="wrapper">
+			<h4>Rich from <a href="https://taptapkaboom.com">Tap  Tap Kaboom</a> presents</h4>
+			<h1>The Silliest &amp;<br/>
+				Most Awesome Gang<br/>
+				In The World!</h1>
+			<h3>It's Circle Guy, Hat Guy &amp; Red Guy.<br/>
+				They're the best of friends.</h3>
+			<a class="cta alt" href="#more-info">Read More</a>
+		</div>
+		<div class="character1"></div>
+		<div class="character2"></div>
+		<div class="character3"></div>
+	</div>
+*/
